# ordloc

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt  test_ordloc.py
.github/workflows/: ci.yml
ordloc/: __init__.py  wordlist_4096.txt
